--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,11 +14,16 @@
   }
 }
 
+html{
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Fira Sans', sans-serif;;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 
 }
 
